--- a/web/mavzu8.html
+++ b/web/mavzu8.html
@@ -119,7 +119,7 @@ body{
 
 <body>
 
-<h1>A1 - Ne? Ne Kadar? (Market, Manav, Mağaza)</h1>
+<h1>8- Mavzu:A1 - Ne? Ne Kadar? (Market, Manav, Mağaza)</h1>
 
 <div class="card">
 <h3>Video dars</h3>
