--- a/web/mavzu4.html
+++ b/web/mavzu4.html
@@ -1,19 +1,17 @@
-
 <!DOCTYPE html>
-<html lang="uz">
+<html>
 <head>
-<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Evim va Ranglar</title>
+<title>4-Mavzu: Evim ve Renkler</title>
 
 <style>
 .test-btn,
 .back-btn,
-.result-btn {
+.result-btn{
   box-sizing: border-box;
 }
 
-body {
+body{
   background: linear-gradient(180deg,#1e1b4b,#020617);
   color:white;
   font-family: Arial, sans-serif;
@@ -21,7 +19,7 @@ body {
 }
 
 /* KARTA */
-.card, .test-box {
+.test-box, .card{
   background: rgba(30,41,59,0.8);
   backdrop-filter: blur(10px);
   padding:20px;
@@ -31,13 +29,13 @@ body {
 }
 
 /* SAVOL */
-.test-box h3 {
+.test-box h3{
   margin-bottom:10px;
   font-size:22px;
 }
 
-/* TUGMALAR */
-.test-btn {
+/* TUGMA */
+.test-btn{
   display:block;
   width:100%;
   padding:16px;
@@ -52,55 +50,50 @@ body {
   transition:0.3s;
 }
 
-.test-btn:hover {
+.test-btn:hover{
   transform:scale(1.03);
   opacity:0.9;
 }
 
 /* NATIJA */
-.result {
+.result{
   margin-top:10px;
   font-size:18px;
   font-weight:bold;
-  min-height: 24px;
 }
 
-.true {
+.true{
   color:#22c55e;
 }
 
-.false {
+.false{
   color:#ef4444;
 }
 
-#yakuniy-natija {
+/* UMUMIY NATIJA */
+#final-score{
   font-size:24px;
   text-align:center;
   margin-top:20px;
-  color:#22c55e;
-  display: none;
-  background: rgba(34, 197, 94, 0.1);
-  padding: 20px;
-  border-radius: 15px;
+  display:none;
 }
 
-/* MAXSUS TUGMALAR */
-.result-btn {
+.result-btn{
   display:block;
   width:100%;
+  margin:20px 0;
   padding:16px;
-  margin:20px 0 10px 0;
-  border:none;
-  border-radius:14px;
   font-size:18px;
+  border-radius:14px;
+  text-align:center;
   font-weight:bold;
   color:white;
+  border:none;
+  background: linear-gradient(90deg,#2563eb,#1d4ed8);
   cursor:pointer;
-  background: linear-gradient(90deg,#2563eb,#3b82f6);
-  text-align: center;
 }
 
-.back-btn {
+.back-btn{
   display:block;
   width:100%;
   margin:10px 0;
@@ -117,20 +110,16 @@ body {
   transition:0.3s;
 }
 
-.back-btn:hover {
+.back-btn:hover{
   transform:scale(1.03);
   opacity:0.9;
-}
-
-iframe {
-  border-radius: 15px;
 }
 </style>
 </head>
 
 <body>
 
-<h1>Mavzu: Mening uyim va Ranglar</h1>
+<h1>4-Mavzu: Evim ve Renkler (Mening uyim va ranglar)</h1>
 
 <div class="card">
 <h3>Video dars</h3>
@@ -148,136 +137,151 @@ iframe {
 <div class="card">
 <h3>Mavzu haqida</h3>
 <p>
-Ushbu darsda turk tilida uy jihozlari, xonalar va ranglar nomini o'rganamiz. Uyda qaysi xonalar borligini aytish uchun oturma odası, mutfak, yatak odası kabi so'zlar ishlatiladi. Biror buyumning qayerda ekanligini so'rash uchun Nerede savoli beriladi. Masalan, Kedi nerede (Mushuk qayerda). Javob berishda -da, -de, -ta, -te qo'shimchalari qo'shiladi. Shuningdek, dars davomida asosiy ranglar: kırmızı, mavi, yeşil, sarı kabi ranglar ham o'rgatiladi.
+Ushbu darsda uyning xonalari, undagi buyumlar va ranglar nomini o'rganamiz. Shuningdek, biror narsa yoki shaxsning qayerda ekanligini bildirish uchun ishlatiladigan joy kelishigi qo'shimchalari bilan tanishasiz.
 </p>
 </div>
 
 <!-- Testlar -->
-<div id="testlar-konteyner">
-    <div class="test-box" id="q1">
-        <h3>Test 1</h3>
-        <p>"Mutfak" so'ziga qaysi qo'shimcha to'g'ri keladi?</p>
-        <button class="test-btn" onclick="check(1, 'da', false)">-da</button>
-        <button class="test-btn" onclick="check(1, 'ta', true)">-ta</button>
-        <button class="test-btn" onclick="check(1, 'de', false)">-de</button>
-        <p id="r1" class="result"></p>
-    </div>
-
-    <div class="test-box" id="q2">
-        <h3>Test 2</h3>
-        <p>"Buzdolabı" qaysi xonada bo'ladi?</p>
-        <button class="test-btn" onclick="check(2, 'A', true)">Mutfak</button>
-        <button class="test-btn" onclick="check(2, 'B', false)">Banyo</button>
-        <button class="test-btn" onclick="check(2, 'C', false)">Bahçe</button>
-        <p id="r2" class="result"></p>
-    </div>
-
-    <div class="test-box" id="q3">
-        <h3>Test 3</h3>
-        <p>"Yatak" qayerda bo'ladi?</p>
-        <button class="test-btn" onclick="check(3, 'A', false)">Oturma odası</button>
-        <button class="test-btn" onclick="check(3, 'B', true)">Yatak odası</button>
-        <button class="test-btn" onclick="check(3, 'C', false)">Mutfak</button>
-        <p id="r3" class="result"></p>
-    </div>
-
-    <div class="test-box" id="q4">
-        <h3>Test 4</h3>
-        <p>"Yeşil" qaysi rang?</p>
-        <button class="test-btn" onclick="check(4, 'A', false)">Qizil</button>
-        <button class="test-btn" onclick="check(4, 'B', false)">Ko'k</button>
-        <button class="test-btn" onclick="check(4, 'C', true)">Yashil</button>
-        <p id="r4" class="result"></p>
-    </div>
-
-    <div class="test-box" id="q5">
-        <h3>Test 5</h3>
-        <p>"Balkon" so'ziga qaysi qo'shimcha to'g'ri?</p>
-        <button class="test-btn" onclick="check(5, 'A', true)">-da</button>
-        <button class="test-btn" onclick="check(5, 'B', false)">-de</button>
-        <button class="test-btn" onclick="check(5, 'C', false)">-ta</button>
-        <p id="r5" class="result"></p>
-    </div>
-
-    <div class="test-box" id="q6">
-        <h3>Test 6</h3>
-        <p>"Mavi" qaysi rang?</p>
-        <button class="test-btn" onclick="check(6, 'A', true)">Ko'k</button>
-        <button class="test-btn" onclick="check(6, 'B', false)">Sariq</button>
-        <button class="test-btn" onclick="check(6, 'C', false)">Oq</button>
-        <p id="r6" class="result"></p>
-    </div>
-
-    <div class="test-box" id="q7">
-        <h3>Test 7</h3>
-        <p>Videodagi Ömer qayerda yashaydi?</p>
-        <button class="test-btn" onclick="check(7, 'A', false)">Apartman</button>
-        <button class="test-btn" onclick="check(7, 'B', true)">Bahçeli ev</button>
-        <button class="test-btn" onclick="check(7, 'C', false)">Sınıf</button>
-        <p id="r7" class="result"></p>
-    </div>
-
-    <div class="test-box" id="q8">
-        <h3>Test 8</h3>
-        <p>"Sarı" qaysi rang?</p>
-        <button class="test-btn" onclick="check(8, 'A', false)">Qora</button>
-        <button class="test-btn" onclick="check(8, 'B', false)">Jigarrang</button>
-        <button class="test-btn" onclick="check(8, 'C', true)">Sariq</button>
-        <p id="r8" class="result"></p>
-    </div>
-
-    <div class="test-box" id="q9">
-        <h3>Test 9</h3>
-        <p>"Televizyon" odatda qayerda bo'ladi?</p>
-        <button class="test-btn" onclick="check(9, 'A', true)">Oturma odası</button>
-        <button class="test-btn" onclick="check(9, 'B', false)">Banyo</button>
-        <button class="test-btn" onclick="check(9, 'C', false)">Bahçe</button>
-        <p id="r9" class="result"></p>
-    </div>
-
-    <div class="test-box" id="q10">
-        <h3>Test 10</h3>
-        <p>"Beyaz" qaysi rang?</p>
-        <button class="test-btn" onclick="check(10, 'A', false)">Pushti</button>
-        <button class="test-btn" onclick="check(10, 'B', true)">Oq</button>
-        <button class="test-btn" onclick="check(10, 'C', false)">Kulrang</button>
-        <p id="r10" class="result"></p>
-    </div>
+<div class="test-box">
+<h3>Test 1</h3>
+<p>Videoga ko'ra, "Kedi nerede?" (Mushuk qayerda?)</p>
+<button class="test-btn" onclick="check(1, 'koltukta')">Koltukta</button>
+<button class="test-btn" onclick="check(1, 'mutfakta')">Mutfakta</button>
+<button class="test-btn" onclick="check(1, 'bahçede')">Bahçede</button>
+<p id="res1" class="result"></p>
 </div>
 
-<button class="result-btn" onclick="showFinalResult()">Natijalarni ko'rish</button>
-<div id="yakuniy-natija"></div>
+<div class="test-box">
+<h3>Test 2</h3>
+<p>"Kadın nerede?" (Ayol kishi qayerda?)</p>
+<button class="test-btn" onclick="check(2, 'banyoda')">Banyoda</button>
+<button class="test-btn" onclick="check(2, 'mutfakta')">Mutfakta</button>
+<button class="test-btn" onclick="check(2, 'salonda')">Salonda</button>
+<p id="res2" class="result"></p>
+</div>
 
+<div class="test-box">
+<h3>Test 3</h3>
+<p>"Halı nerede?" (Gilam qayerda?)</p>
+<button class="test-btn" onclick="check(3, 'yatak odasında')">Yatak odasında</button>
+<button class="test-btn" onclick="check(3, 'balkonda')">Balkonda</button>
+<button class="test-btn" onclick="check(3, 'mutfakta')">Mutfakta</button>
+<p id="res3" class="result"></p>
+</div>
+
+<div class="test-box">
+<h3>Test 4</h3>
+<p>Ömer'in evi kaç katlı? (Ömerning uyi necha qavatli?)</p>
+<button class="test-btn" onclick="check(4, 'tek katlı')">Tek katlı</button>
+<button class="test-btn" onclick="check(4, 'iki katlı')">İki katlı</button>
+<button class="test-btn" onclick="check(4, 'üç katlı')">Üç katlı</button>
+<p id="res4" class="result"></p>
+</div>
+
+<div class="test-box">
+<h3>Test 5</h3>
+<p>Ömer nasıl bir evde oturuyor?</p>
+<button class="test-btn" onclick="check(5, 'bahçeli bir evde')">Bahçeli bir evde</button>
+<button class="test-btn" onclick="check(5, 'apartmanda')">Apartmanda</button>
+<button class="test-btn" onclick="check(5, 'dairede')">Dairede</button>
+<p id="res5" class="result"></p>
+</div>
+
+<div class="test-box">
+<h3>Test 6</h3>
+<p>"Mavi perde" nerede? (Moviy parda qayerda?)</p>
+<button class="test-btn" onclick="check(6, 'mutfakta')">Mutfakta</button>
+<button class="test-btn" onclick="check(6, 'oturma odasında')">Oturma odasında</button>
+<button class="test-btn" onclick="check(6, 'çocuk odasında')">Çocuk odasında</button>
+<p id="res6" class="result"></p>
+</div>
+
+<div class="test-box">
+<h3>Test 7</h3>
+<p>Videodagi taxta (doska) nima rangda?</p>
+<button class="test-btn" onclick="check(7, 'beyaz')">Beyaz</button>
+<button class="test-btn" onclick="check(7, 'siyah')">Siyah</button>
+<button class="test-btn" onclick="check(7, 'yeşil')">Yeşil</button>
+<p id="res7" class="result"></p>
+</div>
+
+<div class="test-box">
+<h3>Test 8</h3>
+<p>Ömer'in ceketi ne renk? (Ömerning kurtkasi nima rangda?)</p>
+<button class="test-btn" onclick="check(8, 'lacivert')">Lacivert</button>
+<button class="test-btn" onclick="check(8, 'siyah')">Siyah</button>
+<button class="test-btn" onclick="check(8, 'kahverengi')">Kahverengi</button>
+<p id="res8" class="result"></p>
+</div>
+
+<div class="test-box">
+<h3>Test 9</h3>
+<p>Qaysi rang turk tilida "Sarı" deb ataladi?</p>
+<button class="test-btn" onclick="check(9, 'sariq')">Sariq</button>
+<button class="test-btn" onclick="check(9, 'qizil')">Qizil</button>
+<button class="test-btn" onclick="check(9, 'koʻk')">Ko'k</button>
+<p id="res9" class="result"></p>
+</div>
+
+<div class="test-box">
+<h3>Test 10</h3>
+<p>Sandalye nerede? (Stul qayerda?)</p>
+<button class="test-btn" onclick="check(10, 'balkonda')">Balkonda</button>
+<button class="test-btn" onclick="check(10, 'bahçede')">Bahçede</button>
+<button class="test-btn" onclick="check(10, 'banyoda')">Banyoda</button>
+<p id="res10" class="result"></p>
+</div>
+
+<div id="final-score"></div>
+
+<button class="result-btn" onclick="showResults()">Natijani ko'rish</button>
 <a href="dars.html" class="back-btn">Orqaga</a>
 
 <script>
-let score = 0;
-let answered = new Array(11).fill(false);
+const answers = {
+  1: 'koltukta',
+  2: 'mutfakta',
+  3: 'balkonda',
+  4: 'iki katlı',
+  5: 'bahçeli bir evde',
+  6: 'oturma odasında',
+  7: 'beyaz',
+  8: 'siyah',
+  9: 'sariq',
+  10: 'balkonda'
+};
 
-function check(qNum, choice, isCorrect) {
-    if (answered[qNum]) return;
-    
-    answered[qNum] = true;
-    let resId = "r" + qNum;
-    let resElem = document.getElementById(resId);
-    
-    if (isCorrect) {
-        score++;
-        resElem.innerHTML = "To'g'ri!";
-        resElem.className = "result true";
-    } else {
-        resElem.innerHTML = "Xato!";
-        resElem.className = "result false";
-    }
+let userAnswers = {};
+
+function check(qNum, choice) {
+  userAnswers[qNum] = choice;
+  const resDiv = document.getElementById('res' + qNum);
+
+  if(choice === answers[qNum]) {
+    resDiv.innerHTML = "To'g'ri!";
+    resDiv.className = "result true";
+  } else {
+    resDiv.innerHTML = "Xato!";
+    resDiv.className = "result false";
+  }
 }
 
-function showFinalResult() {
-    let totalAnswered = answered.filter(a => a === true).length;
-    let wrong = totalAnswered - score;
-    let resultDiv = document.getElementById("yakuniy-natija");
-    resultDiv.style.display = "block";
-    resultDiv.innerHTML = "To'g'ri: " + score + " ta<br>Xato: " + wrong + " ta";
-    window.scrollTo(0, document.body.scrollHeight);
+function showResults() {
+  let correct = 0;
+  let incorrect = 0;
+
+  for(let i=1; i<=10; i++) {
+    if(userAnswers[i] === answers[i]) {
+      correct++;
+    } else {
+      incorrect++;
+    }
+  }
+
+  const finalDiv = document.getElementById('final-score');
+  finalDiv.style.display = "block";
+  finalDiv.innerHTML = "To'g'ri: <span class='true'>" + correct + "</span> | Xato: <span class='false'>" + incorrect + "</span>";
+  window.scrollTo(0, document.body.scrollHeight);
 }
 </script>
 
